Call OData Action from Fiori

--- a/app/sap-cap-ui5-challenge/webapp/i18n/i18n.properties
+++ b/app/sap-cap-ui5-challenge/webapp/i18n/i18n.properties
@@ -7,3 +7,10 @@ appTitle=September Challenge - Full-stack
 
 #YDES: Application description
 appDescription=September Challenge - Full-stack
+
+questions=Questions
+dialogCloseButtonText=Close
+dialogOnSubmitButtonText=Submit
+testQuestions=Test Questions
+EnterCount=Enter questions count...
+dialog=Questions Count Dialog
