--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -1,5 +1,17 @@
+#XTIT
+Answers=Answers
+
+#XTIT
+answerText=Answer Text
+
 #XMSG
 questions=Questions
+
+#XTIT
+Questions=Questions
+
+#XTIT
+questionText=Question Text
 
 #XMSG
 test=Test
