Add Question Maintenance App

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -6,6 +6,7 @@ answerText=Answer Text
 
 #XMSG
 questions=Questions
+question=Question
 
 #XTIT
 Questions=Questions
@@ -25,5 +26,5 @@ tests=Tests
 #XTIT
 Tests=Tests
 
-title = Title
-desc = Description
+title = Test Title
+desc = Test Description
