--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -5,6 +5,9 @@ Answers=Answers
 answerText=Answer Text
 
 #XMSG
+locale=Locale
+
+#XMSG
 questions=Questions
 question=Question
 
@@ -28,3 +31,7 @@ Tests=Tests
 
 title = Test Title
 desc = Test Description
+
+#XMSG
+Translations=Translations
+
