Localization for Question and Answers

--- a/i18n/i18n.properties
+++ b/i18n/i18n.properties
@@ -5,6 +5,9 @@ Answers=Answers
 answerText=Answer Text
 
 #XMSG
+AnswerTranslations=Answer Translations
+
+#XMSG
 locale=Locale
 
 #XMSG
@@ -16,6 +19,9 @@ Questions=Questions
 
 #XTIT
 questionText=Question Text
+
+#XMSG
+QuestionTranslations=Question Translations
 
 #XMSG
 test=Test
